modified train_loop & eval

--- a/notes/Melanoma_dataset.ipynb
+++ b/notes/Melanoma_dataset.ipynb
@@ -2,26 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [],
+   "id": "a592dab344556c81",
    "metadata": {
     "collapsed": false
    },
-   "id": "a592dab344556c81"
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Introducción\n",
-    "Este cuaderno se centra en el procesamiento y análisis de un conjunto de datos de melanoma. Incluye pasos para la carga de datos, preprocesamiento, entrenamiento del modelo y evaluación."
-   ],
+   "id": "884dfa2c9f2720f2",
    "metadata": {
     "collapsed": false
    },
-   "id": "884dfa2c9f2720f2"
+   "source": [
+    "## Introducción\n",
+    "Este cuaderno se centra en el procesamiento y análisis de un conjunto de datos de melanoma. Incluye pasos para la carga de datos, preprocesamiento, entrenamiento del modelo y evaluación."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 70,
+   "id": "e297458e66d698c",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -29,15 +33,15 @@
     "import numpy as np\n",
     "\n",
     "from sklearn.model_selection import train_test_split"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "e297458e66d698c"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 71,
+   "id": "17429aaa5c21af8d",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -59,25 +63,25 @@
     "\n",
     "print(torch.cuda.is_available())\n",
     "print(torch.cuda.get_device_name(0))"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "17429aaa5c21af8d"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 71,
-   "outputs": [],
-   "source": [],
+   "id": "c44088997c1cbedf",
    "metadata": {
     "collapsed": false
    },
-   "id": "c44088997c1cbedf"
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 72,
+   "id": "6e9d634414fcb0a8",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# consts\n",
@@ -86,26 +90,26 @@
     "train_percent = .7\n",
     "val_percent = .2\n",
     "test_percent = .1"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6e9d634414fcb0a8"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Configuración\n",
-    "Las siguientes celdas importan las librerías necesarias y definen constantes utilizadas a lo largo del cuaderno."
-   ],
+   "id": "a3f446c2ab7e62e5",
    "metadata": {
     "collapsed": false
    },
-   "id": "a3f446c2ab7e62e5"
+   "source": [
+    "## Configuración\n",
+    "Las siguientes celdas importan las librerías necesarias y definen constantes utilizadas a lo largo del cuaderno."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 73,
+   "id": "51724f93a2becdfb",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -128,15 +132,15 @@
     "print(\"> Cantidad de elementos\", csv.count(axis=1).size )\n",
     "print(\"> Head de los datos del csv\")\n",
     "print(csv.head())"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "51724f93a2becdfb"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 74,
+   "id": "f2c2d80efad22ce3",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -153,15 +157,15 @@
     "\n",
     "print(\"> Categorias\")\n",
     "print(header)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f2c2d80efad22ce3"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 75,
+   "id": "dd487ad7b0d9ea0d",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -192,34 +196,34 @@
     "print(\"> Cantidad de filas\", csv.count(axis=1).size)\n",
     "print(\"> Head de los datos en el formato que usa pytorch\")\n",
     "print(data.head())"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "dd487ad7b0d9ea0d"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "id": "fc258a4506fca26f",
    "metadata": {
     "collapsed": false
    },
-   "id": "fc258a4506fca26f"
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "c1f642ef672dfe1d",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Carga de Datos y Exploración Inicial\n",
     "El conjunto de datos se carga desde un archivo CSV, y se realiza una exploración inicial para entender su estructura y contenidos."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c1f642ef672dfe1d"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 76,
+   "id": "6b70f51bf4912f76",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -238,15 +242,15 @@
     "\n",
     "print(\"> Cantidad de imagenes de cada tipo:\")\n",
     "print(counter)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6b70f51bf4912f76"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 77,
+   "id": "baac2604b9be6feb",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -265,15 +269,15 @@
     "\n",
     "print(\"> Cantidad mínima de imagenes de un tipo:\")\n",
     "print(min_cat_size)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "baac2604b9be6feb"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 78,
+   "id": "b75e85454418a3d4",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -296,15 +300,15 @@
     "print(\"> Cantidad de elemntos:\", data.count(axis=1).size )\n",
     "print(\"> Datos equilibrados\")\n",
     "print(data.head())"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "b75e85454418a3d4"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 79,
+   "id": "4a3d5f2b4ec3448b",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -327,26 +331,26 @@
     "print(\"> cantidad de elementos\", data.count(axis=1).size)\n",
     "print(\"> datos barajados\")\n",
     "print(data.head())"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "4a3d5f2b4ec3448b"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Preprocesamiento y Análisis de Datos\n",
-    "Estas celdas manejan el preprocesamiento de datos, incluyendo la limpieza, equilibrio y preparación para el aprendizaje automático."
-   ],
+   "id": "b4f69d52d9c9d54a",
    "metadata": {
     "collapsed": false
    },
-   "id": "b4f69d52d9c9d54a"
+   "source": [
+    "## Preprocesamiento y Análisis de Datos\n",
+    "Estas celdas manejan el preprocesamiento de datos, incluyendo la limpieza, equilibrio y preparación para el aprendizaje automático."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 80,
+   "id": "52bd2a6b437772a9",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -365,27 +369,27 @@
     "\n",
     "print(\"> Cantidad de imagenes de cada tipo:\")\n",
     "print(counter)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "52bd2a6b437772a9"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 81,
-   "outputs": [],
-   "source": [
-    "data.to_csv(\"./dataset/balanced_data.csv\", index=False)"
-   ],
+   "id": "d41e8af072468566",
    "metadata": {
     "collapsed": false
    },
-   "id": "d41e8af072468566"
+   "outputs": [],
+   "source": [
+    "data.to_csv(\"./dataset/balanced_data.csv\", index=False)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 82,
+   "id": "675c45665252c0d8",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -433,15 +437,15 @@
     "print(\"> test\", test_data.count(axis=1).size)\n",
     "print(test_data.head())\n",
     "print()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "675c45665252c0d8"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 83,
+   "id": "65875d972288c8e5",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -482,50 +486,50 @@
     "print(\"> test\", test_data.count(axis=1).size, test_data.count(axis=1).size/data.count(axis=1).size)\n",
     "print(counter, f\"({counter[0]/test_data.count(axis=1).size})\")\n",
     "print()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "65875d972288c8e5"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## División de Datos para el Entrenamiento del Modelo\n",
-    "El conjunto de datos se divide en conjuntos de entrenamiento, validación y prueba para prepararse para el entrenamiento del modelo."
-   ],
+   "id": "b055c548040e747d",
    "metadata": {
     "collapsed": false
    },
-   "id": "b055c548040e747d"
+   "source": [
+    "## División de Datos para el Entrenamiento del Modelo\n",
+    "El conjunto de datos se divide en conjuntos de entrenamiento, validación y prueba para prepararse para el entrenamiento del modelo."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 84,
+   "id": "4571fa141d88aa2f",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "train_data.to_csv(\"dataset/train_data.csv\", index=False)\n",
     "val_data.to_csv(\"dataset/val_data.csv\", index=False)\n",
     "test_data.to_csv(\"dataset/test_data.csv\", index=False)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "4571fa141d88aa2f"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# creacion de un dataset personalizado"
-   ],
+   "id": "ed53491ef059f8be",
    "metadata": {
     "collapsed": false
    },
-   "id": "ed53491ef059f8be"
+   "source": [
+    "# creacion de un dataset personalizado"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 85,
+   "id": "74b025b08473b620",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -547,15 +551,15 @@
     "        if self.transform:\n",
     "            image = self.transform(image)\n",
     "        return image, label"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "74b025b08473b620"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 86,
+   "id": "c54cfda2a9fbf1f1",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -645,15 +649,15 @@
     "for images, labels in train_loader:\n",
     "    print(f\"Batch de imágenes: {images.shape}, Batch de etiquetas: {labels.shape}\")\n",
     "    break "
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c54cfda2a9fbf1f1"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 87,
+   "id": "86e00ff04666ab8d",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# imports\n",
@@ -665,29 +669,40 @@
     "\n",
     "# consts\n",
     "CRITERION = nn.CrossEntropyLoss()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "86e00ff04666ab8d"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Red Neuronal simple "
-   ],
+   "id": "9b8fcd7b97d85613",
    "metadata": {
     "collapsed": false
    },
-   "id": "9b8fcd7b97d85613"
+   "source": [
+    "## Red Neuronal simple "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 88,
+   "id": "3195808d0e522f69",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "CNN(\n  (conv1): Conv2d(3, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (conv2): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (conv3): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n  (dropout25): Dropout(p=0.25, inplace=False)\n  (dropout50): Dropout(p=0.5, inplace=False)\n  (fc1): Linear(in_features=41472, out_features=128, bias=True)\n  (fc2): Linear(in_features=128, out_features=8, bias=True)\n)"
+      "text/plain": [
+       "CNN(\n",
+       "  (conv1): Conv2d(3, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (conv2): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (conv3): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (dropout25): Dropout(p=0.25, inplace=False)\n",
+       "  (dropout50): Dropout(p=0.5, inplace=False)\n",
+       "  (fc1): Linear(in_features=41472, out_features=128, bias=True)\n",
+       "  (fc2): Linear(in_features=128, out_features=8, bias=True)\n",
+       ")"
+      ]
      },
      "execution_count": 88,
      "metadata": {},
@@ -740,26 +755,26 @@
     "model = CNN()\n",
     "model.to(device)\n",
     "model.eval()  "
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "3195808d0e522f69"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Preparación del Modelo\n",
-    "Esta sección prepara el modelo de red neuronal usando PyTorch, incluyendo la definición de la arquitectura del modelo y los cargadores de datos."
-   ],
+   "id": "bf9344ab85d911",
    "metadata": {
     "collapsed": false
    },
-   "id": "bf9344ab85d911"
+   "source": [
+    "## Preparación del Modelo\n",
+    "Esta sección prepara el modelo de red neuronal usando PyTorch, incluyendo la definición de la arquitectura del modelo y los cargadores de datos."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 89,
+   "id": "d3d3e819c89a605c",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def plot_loss(history):\n",
@@ -767,37 +782,38 @@
     "    plt.xlabel('Batch')\n",
     "    plt.ylabel('Loss')\n",
     "    plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "d3d3e819c89a605c"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Funciones de Entrenamiento y Evaluación\n",
-    "Aquí se definen las funciones para entrenar el modelo y evaluar su rendimiento."
-   ],
+   "id": "909e3884d1e16d38",
    "metadata": {
     "collapsed": false
    },
-   "id": "909e3884d1e16d38"
+   "source": [
+    "## Funciones de Entrenamiento y Evaluación\n",
+    "Aquí se definen las funciones para entrenar el modelo y evaluar su rendimiento."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 90,
+   "id": "8a2f8ca530edeff5",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def train_loop(model, train_loader, optimizer, criterion, num_epoch, device, history = []):\n",
     "    model.to(device)\n",
-    "    model.train()\n",
     "\n",
     "    for epoch in range(num_epoch):\n",
     "\n",
     "        running_loss = 0\n",
     "        for i, (imgs, cats) in enumerate(train_loader, 1):\n",
     "            \n",
+    "            model.train()\n",
+    "\n",
     "            imgs, cats = imgs.to(device), cats.to(device)\n",
     "            optimizer.zero_grad()\n",
     "            outputs = model(imgs)\n",
@@ -810,7 +826,10 @@
     "                print(f\"Epoch {epoch+1}, Batch {i}, Loss: {running_loss/10:.4f}\")\n",
     "                history.append(running_loss/10)\n",
     "                running_loss = 0.0\n",
-    "        val_loss = eval(model, train_loader, device)\n",
+    "                \n",
+    "        val_pred, val_real = eval(model, train_loader, device)\n",
+    "        val_loss = criterion(val_pred, val_real)\n",
+    "\n",
     "        print(f\"Validation Loss: {val_loss:.4f}\")\n",
     "        early_stopping(val_loss)\n",
     "\n",
@@ -819,15 +838,15 @@
     "            break\n",
     "\n",
     "    print(\"Finished training\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "8a2f8ca530edeff5"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 91,
+   "id": "e8bef5b5c2a53608",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def eval(model, test_loader, device):\n",
@@ -852,30 +871,30 @@
     "            total += cats.size(0)\n",
     "            correct += (predicted == cats).sum().item()\n",
     "\n",
-    "    print(f'Accuracy on test images: {100 * correct / total:.2f}%')\n",
+    "    print(f'Accuracy on images: {100 * correct / total:.2f}%')\n",
     "    print(metrics.classification_report(pred, real, target_names=dataset.classes))\n",
     "    \n",
-    "    #return pred, real"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "e8bef5b5c2a53608"
+    "    return pred, real"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Utilidades Adicionales\n",
-    "Funciones de utilidad adicionales, como la detención temprana, se definen en esta sección."
-   ],
+   "id": "ebf22adcee1bee40",
    "metadata": {
     "collapsed": false
    },
-   "id": "ebf22adcee1bee40"
+   "source": [
+    "## Utilidades Adicionales\n",
+    "Funciones de utilidad adicionales, como la detención temprana, se definen en esta sección."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 92,
+   "id": "97a17b8124f01e9",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "class EarlyStopping:\n",
@@ -898,21 +917,17 @@
     "                self.early_stop = True\n",
     "\n",
     "early_stopping = EarlyStopping(patience=5, min_delta=0.01)\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "97a17b8124f01e9"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Conclusión\n"
-   ],
+   "id": "a91045811b60d1d4",
    "metadata": {
     "collapsed": false
    },
-   "id": "a91045811b60d1d4"
+   "source": [
+    "## Conclusión\n"
+   ]
   }
  ],
  "metadata": {
