--- a/train_loop.ipynb
+++ b/train_loop.ipynb
@@ -37,27 +37,38 @@
    "outputs": [],
    "source": [
     "def train_loop(model, train_loader, optimizer, criterion, num_epoch, device, history = []):\n",
-    "    model.train()\n",
+    "    model.to(device)\n",
     "\n",
     "    for epoch in range(num_epoch):\n",
     "\n",
     "        running_loss = 0\n",
     "        for i, (imgs, cats) in enumerate(train_loader, 1):\n",
+    "            \n",
+    "            model.train()\n",
+    "\n",
     "            imgs, cats = imgs.to(device), cats.to(device)\n",
     "            optimizer.zero_grad()\n",
     "            outputs = model(imgs)\n",
-    "\n",
     "            loss = criterion(outputs, cats)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "\n",
     "            running_loss += loss.item()\n",
     "\n",
     "            if not i % 10:\n",
     "                print(f\"Epoch {epoch+1}, Batch {i}, Loss: {running_loss/10:.4f}\")\n",
     "                history.append(running_loss/10)\n",
     "                running_loss = 0.0\n",
-    "    \n",
+    "                \n",
+    "        val_pred, val_real = eval(model, train_loader, device)\n",
+    "        val_loss = criterion(val_pred, val_real)\n",
+    "\n",
+    "        print(f\"Validation Loss: {val_loss:.4f}\")\n",
+    "        early_stopping(val_loss)\n",
+    "\n",
+    "        if early_stopping.early_stop:\n",
+    "            print(\"Early stopping\")\n",
+    "            break\n",
+    "\n",
     "    print(\"Finished training\")"
    ]
   },
@@ -89,10 +100,10 @@
     "            total += cats.size(0)\n",
     "            correct += (predicted == cats).sum().item()\n",
     "\n",
-    "    print(f'Accuracy on test images: {100 * correct / total:.2f}%')\n",
+    "    print(f'Accuracy on images: {100 * correct / total:.2f}%')\n",
     "    print(metrics.classification_report(pred, real, target_names=dataset.classes))\n",
     "    \n",
-    "    #return pred, real"
+    "    return pred, real"
    ]
   }
  ],
