now eval function is declared before train_loop function

--- a/notes/Melanoma_dataset.ipynb
+++ b/notes/Melanoma_dataset.ipynb
@@ -797,6 +797,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "99dac6e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval(model, test_loader, device):\n",
+    "    \"\"\"with a dataset given - returns predicted values & real values\"\"\"\n",
+    "    model.eval()\n",
+    "\n",
+    "    total = 0\n",
+    "    correct = 0\n",
+    "\n",
+    "    pred = []\n",
+    "    real = []\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for imgs, cats in test_loader:\n",
+    "            imgs, cats = imgs.to(device), cats.to(device)\n",
+    "\n",
+    "            outputs = model(imgs)\n",
+    "            _, predicted = torch.max(outputs, 1)\n",
+    "\n",
+    "            pred.extend(predicted.tolist())\n",
+    "            real.extend(cats.tolist())\n",
+    "\n",
+    "            total += cats.size(0)\n",
+    "            correct += (predicted == cats).sum().item()\n",
+    "\n",
+    "    print(f'Accuracy on images: {100 * correct / total:.2f}%')\n",
+    "    print(metrics.classification_report(pred, real, target_names=dataset.classes))\n",
+    "    \n",
+    "    return pred, real"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 90,
    "id": "8a2f8ca530edeff5",
    "metadata": {
@@ -838,43 +874,6 @@
     "            break\n",
     "\n",
     "    print(\"Finished training\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "e8bef5b5c2a53608",
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def eval(model, test_loader, device):\n",
-    "    model.eval()\n",
-    "\n",
-    "    total = 0\n",
-    "    correct = 0\n",
-    "\n",
-    "    pred = []\n",
-    "    real = []\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        for imgs, cats in test_loader:\n",
-    "            imgs, cats = imgs.to(device), cats.to(device)\n",
-    "\n",
-    "            outputs = model(imgs)\n",
-    "            _, predicted = torch.max(outputs, 1)\n",
-    "\n",
-    "            pred.extend(predicted.tolist())\n",
-    "            real.extend(cats.tolist())\n",
-    "\n",
-    "            total += cats.size(0)\n",
-    "            correct += (predicted == cats).sum().item()\n",
-    "\n",
-    "    print(f'Accuracy on images: {100 * correct / total:.2f}%')\n",
-    "    print(metrics.classification_report(pred, real, target_names=dataset.classes))\n",
-    "    \n",
-    "    return pred, real"
    ]
   },
   {
