modified, now compatible with kaggle

--- a/data_formatter.ipynb
+++ b/data_formatter.ipynb
@@ -30,7 +30,10 @@
     "\n",
     "train_percent = .7\n",
     "val_percent = .2\n",
-    "test_percent = .1"
+    "test_percent = .1\n",
+    "\n",
+    "base_path_csv = \"/kaggle/input\"\n",
+    "base_path_img = \"/kaggle/input/isic-2019\""
    ]
   },
   {
