--- a/notes/Melanoma_dataset.ipynb
+++ b/notes/Melanoma_dataset.ipynb
@@ -37,9 +37,20 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "# Imports\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "# imports\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "import sklearn.metrics as metrics\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, ConfusionMatrixDisplay\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from torchvision import transforms\n",
+    "from torch.utils.data import DataLoader\n",
+    "from PIL import Image\n",
+    "import os\n",
     "\n",
     "from sklearn.model_selection import train_test_split"
    ]
