--- a/notes/Melanoma_dataset.ipynb
+++ b/notes/Melanoma_dataset.ipynb
@@ -41,11 +41,13 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
     "import sklearn.metrics as metrics\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.metrics import classification_report, confusion_matrix, ConfusionMatrixDisplay\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "from torchvision import transforms\n",
     "from torch.utils.data import DataLoader\n",
