--- a/notes/Melanoma_dataset.ipynb
+++ b/notes/Melanoma_dataset.ipynb
@@ -96,15 +96,16 @@
     "# consts\n",
     "cats = [\"MEL\",\"NV\",\"BCC\",\"AK\",\"BKL\",\"DF\",\"VASC\",\"SCC\",\"UNK\"]\n",
     "\n",
-    "base_path_csv = \"./dataset\"\n",
-    "base_path_img = \"./dataset\"\n",
+    "base_path_csv = \"../dataset\"\n",
+    "base_path_img = \"../dataset\"\n",
     "\n",
     "random_state=1\n",
     "\n",
     "train_percent = .7\n",
     "val_percent = .2\n",
     "test_percent = .1\n",
-    "\n"
+    "\n",
+    "batch_size=4096\n"
    ]
   },
   {
@@ -494,11 +495,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "import torch\n",
-    "from torchvision import transforms\n",
-    "from torch.utils.data import DataLoader\n",
-    "from PIL import Image\n",
-    "import os\n",
     "# Carga el conjunto de datos de entrenamiento sin ninguna normalización para calcular la media y la desviación estándar\n",
     "unnormalized_transform = transforms.Compose([\n",
     "    transforms.Resize((150, 150)), \n",
@@ -563,9 +559,9 @@
     "\n",
     "\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=32, shuffle=False)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
     "# Verificar DataLoader\n",
     "for images, labels in train_loader:\n",
@@ -614,7 +610,6 @@
    },
    "outputs": [],
    "source": [
-    "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "\n",
     "class CNN(nn.Module):\n",
