--- a/notes/Melanoma_dataset.ipynb
+++ b/notes/Melanoma_dataset.ipynb
@@ -27,11 +27,11 @@
    "execution_count": 67,
    "id": "e297458e66d698c",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:27.052111200Z",
      "start_time": "2023-12-31T11:50:26.952090200Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -62,11 +62,11 @@
    "execution_count": 68,
    "id": "17429aaa5c21af8d",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:27.120131Z",
      "start_time": "2023-12-31T11:50:26.961091200Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -96,11 +96,11 @@
    "execution_count": 69,
    "id": "6e9d634414fcb0a8",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:27.230167800Z",
      "start_time": "2023-12-31T11:50:27.121131900Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -135,11 +135,11 @@
    "execution_count": 70,
    "id": "51724f93a2becdfb",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:27.502246500Z",
      "start_time": "2023-12-31T11:50:27.230167800Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -170,11 +170,11 @@
    "execution_count": 71,
    "id": "f2c2d80efad22ce3",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:27.725218300Z",
      "start_time": "2023-12-31T11:50:27.504246900Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -199,11 +199,11 @@
    "execution_count": 72,
    "id": "dd487ad7b0d9ea0d",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:28.298040100Z",
      "start_time": "2023-12-31T11:50:27.726217500Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -261,11 +261,11 @@
    "execution_count": 73,
    "id": "6b70f51bf4912f76",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:28.354052400Z",
      "start_time": "2023-12-31T11:50:28.299040600Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -292,11 +292,11 @@
    "execution_count": 74,
    "id": "baac2604b9be6feb",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:28.521115200Z",
      "start_time": "2023-12-31T11:50:28.331047500Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -323,11 +323,11 @@
    "execution_count": 75,
    "id": "b75e85454418a3d4",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:28.824184800Z",
      "start_time": "2023-12-31T11:50:28.522116500Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -358,11 +358,11 @@
    "execution_count": 76,
    "id": "4a3d5f2b4ec3448b",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:29.138627300Z",
      "start_time": "2023-12-31T11:50:28.823184900Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -404,11 +404,11 @@
    "execution_count": 77,
    "id": "52bd2a6b437772a9",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:29.313684400Z",
      "start_time": "2023-12-31T11:50:29.139627600Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -435,11 +435,11 @@
    "execution_count": 78,
    "id": "d41e8af072468566",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:29.502999600Z",
      "start_time": "2023-12-31T11:50:29.312685100Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -451,11 +451,11 @@
    "execution_count": 79,
    "id": "675c45665252c0d8",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:29.693659800Z",
      "start_time": "2023-12-31T11:50:29.504000100Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -511,11 +511,11 @@
    "execution_count": 80,
    "id": "65875d972288c8e5",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:29.946977Z",
      "start_time": "2023-12-31T11:50:29.698661100Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -575,11 +575,11 @@
    "execution_count": 81,
    "id": "4571fa141d88aa2f",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:30.185909300Z",
      "start_time": "2023-12-31T11:50:29.947977800Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -603,11 +603,11 @@
    "execution_count": 82,
    "id": "74b025b08473b620",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:30.407156900Z",
      "start_time": "2023-12-31T11:50:30.186909500Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -638,11 +638,11 @@
    "execution_count": 83,
    "id": "c54cfda2a9fbf1f1",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:47.451896300Z",
      "start_time": "2023-12-31T11:50:30.408156700Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -725,9 +725,9 @@
     "\n",
     "\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=4*torch.cuda.device_count(), pin_memory=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=4*torch.cuda.device_count(), pin_memory=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False, num_workers=4*torch.cuda.device_count(), pin_memory=True)\n",
     "\n",
     "# Verificar DataLoader\n",
     "for images, labels in train_loader:\n",
@@ -740,11 +740,11 @@
    "execution_count": 84,
    "id": "86e00ff04666ab8d",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:47.472900300Z",
      "start_time": "2023-12-31T11:50:47.453895900Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -768,11 +768,11 @@
    "execution_count": 85,
    "id": "3195808d0e522f69",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:47.690949700Z",
      "start_time": "2023-12-31T11:50:47.472900300Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -855,11 +855,11 @@
    "execution_count": 86,
    "id": "d3d3e819c89a605c",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:47.736118400Z",
      "start_time": "2023-12-31T11:50:47.691949600Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -924,7 +924,7 @@
     "    print(f'Accuracy on images: {100 * correct / total:.2f}%')\n",
     "    print(metrics.classification_report(pred, real, zero_division=0))\n",
     "    \n",
-    "    return torch.FloatTensor(pred), torch.FloatTensor(real), val_loss/(len(test_loader))"
+    "    return torch.FloatTensor(pred).to(device), torch.FloatTensor(real).to(device), val_loss/(len(test_loader))"
    ]
   },
   {
@@ -932,11 +932,11 @@
    "execution_count": 88,
    "id": "8a2f8ca530edeff5",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:47.943196Z",
      "start_time": "2023-12-31T11:50:47.835141600Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -990,11 +990,11 @@
    "execution_count": 89,
    "id": "97a17b8124f01e9",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-12-31T11:50:48.114608600Z",
      "start_time": "2023-12-31T11:50:47.944196Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1025,11 +1025,11 @@
    "execution_count": null,
    "id": "95cccb2ef10a97fd",
    "metadata": {
-    "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
      "start_time": "2023-12-31T11:50:48.115608500Z"
-    }
+    },
+    "collapsed": false,
+    "is_executing": true
    },
    "outputs": [
     {
@@ -1193,7 +1193,7 @@
    "source": [
     "model = model.to(device)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
-    "criterion = torch.nn.CrossEntropyLoss()\n",
+    "criterion = torch.nn.CrossEntropyLoss().to(device)\n",
     "num_epochs = 200\n",
     "\n",
     "train_loop(model, train_loader, optimizer, criterion, num_epochs, device)"
