--- a/notes/Melanoma_dataset.ipynb
+++ b/notes/Melanoma_dataset.ipynb
@@ -803,11 +803,8 @@
     "        super(CNN, self).__init__()\n",
     "        # Capas convolucionales\n",
     "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=32, kernel_size=3, stride=1, padding=1)\n",
-    "        self.bn1 = nn.BatchNorm2d(32)\n",
     "        self.conv2 = nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, stride=1, padding=1)\n",
-    "        self.bn2 = nn.BatchNorm2d(64)\n",
     "        self.conv3 = nn.Conv2d(in_channels=64, out_channels=128, kernel_size=3, stride=1, padding=1)\n",
-    "        self.bn3 = nn.BatchNorm2d(128)\n",
     "\n",
     "        # Max pooling\n",
     "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
@@ -817,25 +814,33 @@
     "        self.dropout50 = nn.Dropout(0.5)\n",
     "\n",
     "        # Capas Fully connected \n",
-    "        self.fc1 = nn.Linear(in_features=128 * 18 * 18, out_features=512)\n",
-    "        self.fc2 = nn.Linear(in_features=512, out_features=8)  # Asegúrate de que 8 sea el número correcto de clases\n",
+    "        # ajustado para 150x150\n",
+    "        self.fc1 = nn.Linear(in_features=128 * 18 * 18, out_features=128)\n",
+    "        self.fc2 = nn.Linear(in_features=128, out_features=8)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.pool(F.relu(self.bn1(self.conv1(x))))\n",
-    "        x = self.pool(F.relu(self.bn2(self.conv2(x))))\n",
-    "        x = self.dropout25(x)\n",
-    "        x = self.pool(F.relu(self.bn3(self.conv3(x))))\n",
+    "\n",
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "\n",
+    "\n",
+    "        x = self.pool(F.relu(self.conv2(x)))\n",
     "        x = self.dropout25(x)\n",
     "\n",
-    "        x = x.view(-1, 128 * 18 * 18)\n",
+    "   \n",
+    "        x = self.pool(F.relu(self.conv3(x)))\n",
+    "        x = self.dropout25(x)\n",
+    "\n",
+    "       \n",
+    "        x = x.view(-1, 128 *18 * 18)\n",
+    "\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.dropout50(x)\n",
+    "\n",
     "        x = self.fc2(x)\n",
     "        return x\n",
     "\n",
     "model = CNN()\n",
     "if torch.cuda.device_count() > 1:  model = nn.DataParallel(model)\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
     "print(model)"
    ]
   },
