--- a/notes/Melanoma_dataset.ipynb
+++ b/notes/Melanoma_dataset.ipynb
@@ -24,22 +24,22 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "id": "ee142f79e26fe88f",
    "metadata": {
     "collapsed": false
    },
-   "id": "ee142f79e26fe88f"
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 341,
    "id": "e297458e66d698c",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:08.292007400Z",
      "start_time": "2024-01-01T15:18:08.206996500Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -70,11 +70,11 @@
    "execution_count": 342,
    "id": "17429aaa5c21af8d",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:08.520138700Z",
      "start_time": "2024-01-01T15:18:08.215990600Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -104,11 +104,11 @@
    "execution_count": 343,
    "id": "6e9d634414fcb0a8",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:08.521138800Z",
      "start_time": "2024-01-01T15:18:08.327016100Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -143,11 +143,11 @@
    "execution_count": 344,
    "id": "51724f93a2becdfb",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:08.627162800Z",
      "start_time": "2024-01-01T15:18:08.484705400Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -178,11 +178,11 @@
    "execution_count": 345,
    "id": "f2c2d80efad22ce3",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:08.691177200Z",
      "start_time": "2024-01-01T15:18:08.629163600Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -207,11 +207,11 @@
    "execution_count": 346,
    "id": "dd487ad7b0d9ea0d",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:09.008741700Z",
      "start_time": "2024-01-01T15:18:08.693177700Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -269,11 +269,11 @@
    "execution_count": 347,
    "id": "6b70f51bf4912f76",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:09.058023300Z",
      "start_time": "2024-01-01T15:18:09.010741800Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -300,11 +300,11 @@
    "execution_count": 348,
    "id": "baac2604b9be6feb",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:09.128039100Z",
      "start_time": "2024-01-01T15:18:09.041749Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -331,11 +331,11 @@
    "execution_count": 349,
    "id": "b75e85454418a3d4",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:09.394549100Z",
      "start_time": "2024-01-01T15:18:09.124037Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -366,11 +366,11 @@
    "execution_count": 350,
    "id": "4a3d5f2b4ec3448b",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:09.485622100Z",
      "start_time": "2024-01-01T15:18:09.390548600Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -412,11 +412,11 @@
    "execution_count": 351,
    "id": "52bd2a6b437772a9",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:09.598136600Z",
      "start_time": "2024-01-01T15:18:09.487622600Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -443,11 +443,11 @@
    "execution_count": 352,
    "id": "d41e8af072468566",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:09.846922100Z",
      "start_time": "2024-01-01T15:18:09.596137600Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -459,11 +459,11 @@
    "execution_count": 353,
    "id": "675c45665252c0d8",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:09.942120400Z",
      "start_time": "2024-01-01T15:18:09.849922400Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -519,11 +519,11 @@
    "execution_count": 354,
    "id": "65875d972288c8e5",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:10.059389100Z",
      "start_time": "2024-01-01T15:18:09.946120900Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -583,11 +583,11 @@
    "execution_count": 355,
    "id": "4571fa141d88aa2f",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:10.158415Z",
      "start_time": "2024-01-01T15:18:10.053387100Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -611,11 +611,11 @@
    "execution_count": 356,
    "id": "74b025b08473b620",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:10.260899900Z",
      "start_time": "2024-01-01T15:18:10.150412600Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -646,11 +646,11 @@
    "execution_count": 357,
    "id": "c54cfda2a9fbf1f1",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:27.055698300Z",
      "start_time": "2024-01-01T15:18:10.258898700Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -748,11 +748,11 @@
    "execution_count": 358,
    "id": "86e00ff04666ab8d",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:27.079703600Z",
      "start_time": "2024-01-01T15:18:27.051697500Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -776,11 +776,11 @@
    "execution_count": 359,
    "id": "3195808d0e522f69",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:27.168724Z",
      "start_time": "2024-01-01T15:18:27.065701100Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [
     {
@@ -865,11 +865,11 @@
    "execution_count": 360,
    "id": "d3d3e819c89a605c",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:27.289434300Z",
      "start_time": "2024-01-01T15:18:27.161722400Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -904,6 +904,7 @@
    "outputs": [],
    "source": [
     "def eval(model, test_loader, device, criterion):\n",
+    "    \"\"\"=> all_predictions, all_targets, val_loss, accuracy\"\"\"\n",
     "\n",
     "    model.eval()\n",
     "\n",
@@ -937,6 +938,14 @@
   {
    "cell_type": "code",
    "execution_count": 362,
+   "id": "c63a25ff37b10f38",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-01T15:18:27.528464Z",
+     "start_time": "2024-01-01T15:18:27.465539100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "class EarlyStopping:\n",
@@ -959,34 +968,27 @@
     "                self.early_stop = True\n",
     "\n",
     "early_stopping = EarlyStopping(patience=20, min_delta=0.01)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-01T15:18:27.528464Z",
-     "start_time": "2024-01-01T15:18:27.465539100Z"
-    }
-   },
-   "id": "c63a25ff37b10f38"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 363,
    "id": "8a2f8ca530edeff5",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:27.641589100Z",
      "start_time": "2024-01-01T15:18:27.529464400Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def train_loop(model, train_loader, val_loader, optimizer, criterion, num_epoch, device):\n",
-    "    train_accuracy_history = []\n",
-    "    val_accuracy_history = []\n",
-    "    train_loss_history = []\n",
-    "    val_loss_history = []\n",
+    "def train_loop(model, train_loader, val_loader, optimizer, criterion, num_epoch, device,\n",
+    "               train_accuracy_history = [], val_accuracy_history = [],\n",
+    "               train_loss_history = [], val_loss_history = [] ):\n",
+    "    \"\"\" Si quieres mantener un historial anterior, puedes pasarle el registro con parámetro \"\"\"\n",
+    "\n",
+    "   \n",
     "\n",
     "    for epoch in range(num_epoch):\n",
     "        model.train()\n",
@@ -995,14 +997,15 @@
     "        total = 0\n",
     "\n",
     "        for imgs, cats in train_loader:\n",
+    "\n",
     "            imgs, cats = imgs.to(device), cats.to(device)\n",
     "            optimizer.zero_grad()\n",
     "            outputs = model(imgs)\n",
     "            loss = criterion(outputs, cats)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "\n",
     "            _, predicted = torch.max(outputs.data, 1)\n",
+    "\n",
     "            total += cats.size(0)\n",
     "            correct += (predicted == cats).sum().item()\n",
     "            running_loss += loss.item()\n",
@@ -1043,11 +1046,11 @@
    "execution_count": 363,
    "id": "97a17b8124f01e9",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-01-01T15:18:27.657594700Z",
      "start_time": "2024-01-01T15:18:27.641589100Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1059,11 +1062,11 @@
    "execution_count": null,
    "id": "95cccb2ef10a97fd",
    "metadata": {
-    "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
      "start_time": "2024-01-01T15:18:27.657594700Z"
-    }
+    },
+    "collapsed": false,
+    "is_executing": true
    },
    "outputs": [
     {
@@ -1230,6 +1233,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ebca933b926aff8f",
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -1241,12 +1249,7 @@
     "except Exception as e:\n",
     "    print(\"Error al guardar el modelo:\", e)\n",
     "'''"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "is_executing": true
-   },
-   "id": "ebca933b926aff8f"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1261,12 +1264,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "86e33af808c3791e",
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
     "# generar la matriz de confusión\n",
+    "\n",
     "cm = confusion_matrix(targets, preds)\n",
     "plt.figure(figsize=(10,10))\n",
     "sns.heatmap(cm, annot=True, fmt='d')\n",
@@ -1292,25 +1301,32 @@
     "plt.ylabel('Loss')\n",
     "plt.legend()\n",
     "\n",
+    "# cjto de tests\n",
+    "tests_preds, tests_reals, test_loss, test_acc = eval(model, test_loader, device, criterion=criterion)\n",
+    "cm = confusion_matrix(tests_reals, tests_preds)\n",
+    "sns.heatmap(cm, annot=True, fmt='d')\n",
+    "plt.title(\"Tests Dataset\")\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('True')\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Tests Dataset ----------------------------------------------------------------\")\n",
+    "print(f\"test_loss: {test_loss} - test_acc: {test_acc}\")\n",
+    "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "is_executing": true
-   },
-   "id": "86e33af808c3791e"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "id": "c8d41a927e7b397e",
    "metadata": {
     "collapsed": false,
     "is_executing": true
    },
-   "id": "c8d41a927e7b397e"
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
