working on new dataset

--- a/notes/Melanoma_dataset.ipynb
+++ b/notes/Melanoma_dataset.ipynb
@@ -101,8 +101,7 @@
     "\n",
     "train_percent = .7\n",
     "val_percent = .2\n",
-    "test_percent = .1\n",
-    "\n"
+    "test_percent = .1"
    ]
   },
   {
